# craytraverse

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.rst  CMakeLists.txt  Dockerfile  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
build_scripts/: Dockerfile  build_wheel.sh  dist_check.sh  dist_versions.sh  docker_run.sh  edit_linux.sh  release.sh  requirements.txt
craytraverse/: __init__.py
craytraverse/crenderer/: __init__.py
craytraverse/renderer/: __init__.py  rcontrib.py  renderer.py  rtrace.py
src/: CMakeLists.txt  PyRtraceSimulManager.cpp  PyRtraceSimulManager.h  Version.c  rcontrib.cpp  rcontrib.hh  render.cpp  render.hh  rtrace.cpp  rtrace.hh  rxtrace_py.cpp
src/csrc/: error.c  error_mod.h  func.c  otypes.c  rcinit.c  rcinit.h  rcontribparts.c  rcraycalls.c  rtinit.c  rtinit.h  rtraceparts.c  source.c  standard.h
tests/: test_craytraverse.py  test_crcontrib.py  test_crtrace.py  test_pyrtrace.py
tests/craytraverse/: light.rad  sky2.oct
tests/pyrtrace/: rays.txt  rays2.txt  rtrace_out.txt  rxtrace_out.txt  rxtrace_out2.txt  sky.oct  test.sh
tests/rcontrib_reset/: box.oct  box.rad
tests/resources/: mirror.oct  mirror.rad  zero.rad
